--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  
+
     <title>Tienda Peluditos</title>
+
 </head>
+
 <body>
-    
+    <nav class="nav">
+        <img src="./imag/logo.png" alt="" class="logo">
+        <a href="" class="nav__item">Inicio</a>
+        <a href="" class="nav__item">Sobre nosotros</a>
+        <a href="" class="nav__item">Sedes</a>
+        <a href="" class="nav__item">Amigos</a>
+    </nav>
+
+    <div class="outer-container">
+        <div class="banner" data--200-top="opacity: 1;" data-top-bottom="opacity: 0;">
+            <div class="banner__image" data-0="transform: translateY(0px);"
+                data-top-bottom="transform: translateY(300px);"
+                style="background-image:url(http://www.zastavki.com/pictures/originals/2013/Nature___Seasons___Autumn_The_road_in_the_woods_in_autumn_043605_.jpg);">
+            </div>
+            <div class="banner__caption">
+                <h1>Peluditos</h1>
+                <h3>Centro de adopcion</h3>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni dolorem reiciendis ea iste tenetur consequatur, ipsam maiores, rerum molestiae facere incidunt placeat? Inventore delectus deleniti consectetur, atque iste temporibus?
+                </p>
+            </div>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
