--- a/views/home.html
+++ b/views/home.html
@@ -4,8 +4,8 @@
 <head>
 
     <title>Peluditos</title>
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="../styles/slides.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/slides.css">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
@@ -19,7 +19,7 @@
     <div class="app">
         <header class="app__header">
             <nav class="nav">
-                <img src="./imag/logo.png" alt="" class="logo">
+                <img src="/imag/logo.png" alt="" class="logo">
                 <a href="" class="nav__item">Inicio</a>
                 <a href="" class="nav__item">Sobre nosotros</a>
                 <a href="" class="nav__item">Sedes</a>
@@ -408,7 +408,7 @@
 
         </div><!--  fin de body -->
     </div> <!--  fin de app -->
-    <script src="./main.js"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
