--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -4,7 +4,7 @@
 <head>
 
     <title>Tienda Peluditos</title>
-
+    <link rel="stylesheet" href="/styles/tienda.css">
 </head>
 
 <body>
@@ -35,11 +35,12 @@
     </div>
 
     <div class="filtros">
-        
+
 
     </div>
 
 
+ <script src="/scripts/tienda.js"></script>
 </body>
 
 </html>
