anvance en lo grafico

--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -28,19 +28,21 @@
                 <h1>Peluditos</h1>
                 <h3>Centro de adopcion</h3>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni dolorem reiciendis ea iste tenetur consequatur, ipsam maiores, rerum molestiae facere incidunt placeat? Inventore delectus deleniti consectetur, atque iste temporibus?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni dolorem reiciendis ea
+                    iste tenetur consequatur, ipsam maiores, rerum molestiae facere incidunt placeat? Inventore delectus
+                    deleniti consectetur, atque iste temporibus?
                 </p>
             </div>
         </div>
     </div>
 
     <div class="filtros">
-
+        
 
     </div>
 
 
- <script src="/scripts/tienda.js"></script>
+    <script src="/scripts/tienda.js"></script>
 </body>
 
 </html>
