--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -5,6 +5,11 @@ $blanco: #ffffff;
 $negro: #231f20;
 
 
+html{
+  margin: 2px;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+}
 
 body {
     font-size: 18px;
@@ -53,15 +58,12 @@ body {
     background-color: #000;
     transform-style: preserve-3d;
     transform: translatez(0);
-    
-    &__image, &__caption {
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-    
+      
     &__image {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
       height: 800px;
       z-index: 10;
       overflow: hidden;
@@ -73,28 +75,51 @@ body {
     }
     
     &__caption {
-     background: (0,0,0,0.3);
+      font-family: 'Poppins', sans-serif;
+      width: 45%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: rgba(255,255,255, 0.7);
       height: auto;
       z-index: 20;
-      text-align: center;
-      color: $naranja;
+      text-align: left;
       position: relative;
       top: 50%;
       transform: translateY(-50%);
       margin-top: -10px;
-      padding-left: 20px;
+      padding-bottom: 30px;
+      padding-left: 50px;
       padding-right: 20px;
       
       & h1 {
+        color: $naranja;
         font-size: 82px;
-        font-weight: 100;
-        letter-spacing: -1px;
-        font-family: 'Roboto', sans-serif;
+        font-weight: 30;
+        letter-spacing: 1px;
+        margin-bottom: 0;
+        padding-top: 20px;
+        margin-top: 20px;
+        padding-right: 30px;
+        line-height: 80px;
+
+      }
+      & h3{
+        margin-top: 0;
+        color: $azul;
+        letter-spacing: 7px;
+        font-size: 25px;
+        font-weight: lighter; 
+      }
+
+      & p {
+        color: $negro;
+        padding-right: 30px;
       }
       
-      & p {
-        margin-top: 20px;
-      }
     }
+
+
+    
     
   }
