grafica del registro de datos

--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -5,6 +5,7 @@
 
     <title>Tienda Peluditos</title>
     <link rel="stylesheet" href="/styles/tienda.css">
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 
 <body>
@@ -37,7 +38,42 @@
     </div>
 
     <div class="filtros">
-        
+        <div class="switch">
+            <input name="radio" type="radio" value="optionone" id="optionone" checked>
+            <label for="optionone">Femenino</label>
+
+            <input name="radio" type="radio" value="optiontwo" id="optiontwo">
+            <label for="optiontwo" class="right">Masculino</label>
+
+            <span aria-hidden="true"></span>
+        </div>
+
+        <div class="switch2">
+            <input name="radio" type="radio" value="optionone" id="optionone" checked>
+            <label for="optionone">Gato</label>
+
+            <input name="radio" type="radio" value="optiontwo" id="optiontwo">
+            <label for="optiontwo" class="right">Perro</label>
+
+            <span aria-hidden="true"></span>
+        </div>
+
+        <div class="listado">
+            <div class="fila1">
+                <div>
+                    <section class="imagen"></section>
+                    <section class="nombre"></section>
+                    <section class="info"></section>
+                    <section class="boton">
+
+                    </section>
+                </div>
+
+            </div>
+            <div class="fila2"></div>
+            <div class="fila3"></div>
+        </div>
+
 
     </div>
 
