--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -28,7 +28,9 @@
                 <h1>Peluditos</h1>
                 <h3>Centro de adopcion</h3>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni dolorem reiciendis ea iste tenetur consequatur, ipsam maiores, rerum molestiae facere incidunt placeat? Inventore delectus deleniti consectetur, atque iste temporibus?
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur magni dolorem reiciendis ea
+                    iste tenetur consequatur, ipsam maiores, rerum molestiae facere incidunt placeat? Inventore delectus
+                    deleniti consectetur, atque iste temporibus?
                 </p>
             </div>
         </div>
@@ -39,8 +41,20 @@
 
     </div>
 
+    <div>
+        <ul>
+            {{#each productos}}
+                <li>
+                    <h3>{{nombre}}</h3>
+                    <p>{{precio}}</p>
+                    <img src="../fotos/{{imagen}}" alt="" width="500px">
+                </li>
+            {{/each}}
+        </ul>
+    </div>
 
- <script src="/scripts/tienda.js"></script>
+
+    <script src="/scripts/tienda.js"></script>
 </body>
 
 </html>
