se trabaja en el formulario de los datos

--- a/views/forma.handlebars
+++ b/views/forma.handlebars
@@ -36,11 +36,10 @@
         </fieldset>
         <fieldset>
             <h2 class="fs-title">Personal Details</h2>
-            <h3 class="fs-subtitle">We will never sell it</h3>
-            <input type="text" name="fname" placeholder="First Name" />
-            <input type="text" name="lname" placeholder="Last Name" />
-            <input type="text" name="phone" placeholder="Phone" />
-            <textarea name="address" placeholder="Address"></textarea>
+            <input type="text" name="fname" placeholder="Nombre" />
+            <input type="text" name="lname" placeholder="Apellido" />
+            <input type="text" name="phone" placeholder="Numero telefonico" />
+            <textarea name="address" placeholder="Direccion"></textarea>
             <input type="button" name="previous" class="previous action-button" value="Previous" />
             <input type="submit" name="submit" class="submit action-button" value="Submit" />
         </fieldset>
