--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -19,7 +19,7 @@
     <div class="app">
         <header class="app__header">
             <nav class="nav">
-                <img src="/imag/logo.png" alt="" class="logo">
+                <img src="/fotos/logo.png" alt="" class="logo">
                 <a href="" class="nav__item">Inicio</a>
                 <a href="" class="nav__item">Sobre nosotros</a>
                 <a href="" class="nav__item">Sedes</a>
@@ -44,8 +44,8 @@
 
                 </div>
                 <div class="top__down">
-                    <div><img src="./imag/peluditos.png" alt="" class="down__uno"></div>
-                    <div class="top__down__estrella"><img src="./imag/estrella.png" alt="" class="top__down__imagen">
+                    <div><img src="/fotos/peluditos.png" alt="" class="down__uno"></div>
+                    <div class="top__down__estrella"><img src="/fotos/estrella.png" alt="" class="top__down__imagen">
                     </div>
                 </div>
 
@@ -77,12 +77,12 @@
 
                 <article class="interac">
                     <figure class="cd-image-container">
-                        <img src="./imag/antes.png" alt="">
+                        <img src="/fotos/antes.png" alt="">
                         <span class="cd-image-label" data-type="original">Sin ti</span>
 
                         <div class="cd-resize-img">
                             <!-- the resizable image on top -->
-                            <img src="./imag/despues.png" alt="">
+                            <img src="/fotos/despues.png" alt="">
                             <span class="cd-image-label" data-type="modified">Con tigo</span>
                         </div>
 
@@ -101,7 +101,7 @@
                         <div class="cuadros">
                             <div class="columnas">
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/tommy.jpg)" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/tommy.jpg)" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Tommy</p>
@@ -110,7 +110,7 @@
                                 </article>
 
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/princesa.jpg)" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/princesa.jpg)" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Princesa</p>
@@ -119,7 +119,7 @@
                                 </article>
 
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/cobu.jpg)" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/cobu.jpg)" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Cobu</p>
@@ -130,7 +130,7 @@
 
                             <div class="columnas">
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/zeus.jpg);" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/zeus.jpg);" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Zeus</p>
@@ -139,7 +139,7 @@
                                 </article>
 
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/pelus.jpg)" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/pelus.jpg)" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Pelus</p>
@@ -148,7 +148,7 @@
                                 </article>
 
                                 <article class="gato columnas__col">
-                                    <section style="background-image: url(../imag/tut.jpg)" class="gato__imagen">
+                                    <section style="background-image: url(../fotos/tut.jpg)" class="gato__imagen">
                                     </section>
                                     <section class="gato__info">
                                         <p class="gato__desc">Tut</p>
@@ -214,7 +214,7 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/tommy.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/tommy.jpg)" class="gato__imagenM">
                             </section>
                             <section class="modal__info">
                                 <p class="desc__titulo">Tommy</p>
@@ -236,8 +236,9 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/princesa.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/princesa.png)" class="gato__imagenM">
                             </section>
+
                             <section class="modal__info">
                                 <p class="desc__titulo">Princesa</p>
                                 <p class="modal__desc">Edad: 2 años</p>
@@ -258,7 +259,7 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/cobu.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/cobu.jpg)" class="gato__imagenM">
                             </section>
                             <section class="modal__info">
                                 <p class="desc__titulo">Cobu</p><br>
@@ -280,7 +281,7 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/zeus.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/zeus.jpg)" class="gato__imagenM">
                             </section>
                             <section class="modal__info">
                                 <p class="desc__titulo">Zeus</p>
@@ -302,7 +303,7 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/pelus.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/pelus.jpg)" class="gato__imagenM">
                             </section>
                             <section class="modal__info">
                                 <p class="desc__titulo">Pelus</p>
@@ -324,7 +325,7 @@
                         <span class="modal__cerrar">&times;</span>
                         <!--para hacer la x de cerrar -->
                         <article class="">
-                            <section style="background-image: url(../imag/tut.jpg)" class="gato__imagenM">
+                            <section style="background-image: url(../fotos/tut.jpg)" class="gato__imagenM">
                             </section>
                             <section class="modal__info">
                                 <p class="desc__titulo">Tut</p>
@@ -408,7 +409,7 @@
 
         </div><!--  fin de body -->
     </div> <!--  fin de app -->
-    <script src="/main.js"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 
 </html>
