--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -25,7 +25,7 @@
         <div class="banner" data--200-top="opacity: 1;" data-top-bottom="opacity: 0;">
             <div class="banner__image" data-0="transform: translateY(0px);"
                 data-top-bottom="transform: translateY(300px);"
-                style="background-image:url(http://www.zastavki.com/pictures/originals/2013/Nature___Seasons___Autumn_The_road_in_the_woods_in_autumn_043605_.jpg);">
+                style="background-image:url(https://wallpaperplay.com/walls/full/4/a/b/243359.jpg);">
             </div>
             <div class="banner__caption">
                 <h1>Peluditos</h1>
@@ -79,6 +79,10 @@
             <span aria-hidden="true"></span>
         </div>
 
+    </div>
+
+    <div>
+        <hr class="linea">
     </div>
 
     <div>
