--- a/views/producto.handlebars
+++ b/views/producto.handlebars
@@ -14,7 +14,7 @@
     </div>
 
     <h1 class="producto__nombre">{{producto.nombre}}</h1>
-    <img class="producto__imagen" src="{{producto.imagen}}" alt="">
+    <img  src="../../fotos/{{producto.imagen}}" alt="">
     <p class="producto__precio">{{producto.precio}}</p>
 
     <div>
