--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -41,43 +41,83 @@
 
 
     <div class="filtros">
-        <div class="switch">
+        <div class="switchMacho">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
-            <label for="optionone">Hembra</label>
+            <label for="optionone">OFF</label>
 
             <input name="radio" type="radio" value="optiontwo" id="optiontwo">
             <label id="selector1" for="optiontwo" class="right">Macho</label>
 
             <span aria-hidden="true"></span>
 
-          {{!-- {{     {{#if_eq categoria 'macho'}}
+           {{#if macho}}
                 <script>
-                    var indicator = $(selector1).parent('.switch').find('span');
+                    var indicator = $(selector1).parent('.switchMacho').find('span');
                     $(indicator).addClass('right');
 
                 </script>
-            {{/if_eq}}    }} --}}
+            {{/if}}
         </div>
 
-        <div class="switch2">
+         <div class="switchHembra">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
-            <label for="optionone">Gato</label>
+            <label for="optionone">OFF</label>
 
             <input name="radio" type="radio" value="optiontwo" id="optiontwo">
-            <label for="optiontwo" class="right">Perro</label>
+            <label id="selector1" for="optiontwo" class="right">Hembra</label>
 
             <span aria-hidden="true"></span>
+
+           {{#if hembra}}
+                <script>
+                    var indicator = $(selector1).parent('.switchHembra').find('span');
+                    $(indicator).addClass('right');
+
+                </script>
+            {{/if}}
         </div>
 
-         <div class="switch3">
+
+
+        <div class="switchGato">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
-            <label for="optionone">Adulto</label>
+            <label for="optionone">OFF</label>
 
             <input name="radio" type="radio" value="optiontwo" id="optiontwo">
-            <label for="optiontwo" class="right">Cachorro</label>
+            <label id="selector1" for="optiontwo" class="right">Gato</label>
 
             <span aria-hidden="true"></span>
+
+           {{#if gato}}
+                <script>
+                    var indicator = $(selector1).parent('.switchGato').find('span');
+                    $(indicator).addClass('right');
+
+                </script>
+            {{/if}}
         </div>
+
+         <div class="switchPerro">
+            <input name="radio" type="radio" value="optionone" id="optionone" checked>
+            <label for="optionone">OFF</label>
+
+            <input name="radio" type="radio" value="optiontwo" id="optiontwo">
+            <label id="selector1" for="optiontwo" class="right">Perro</label>
+
+            <span aria-hidden="true"></span>
+
+           {{#if perro}}
+                <script>
+                    var indicator = $(selector1).parent('.switchPerro').find('span');
+                    $(indicator).addClass('right');
+
+                </script>
+            {{/if}}
+        </div>
+
+        
+
+        
 
     </div>
 
@@ -93,7 +133,7 @@
                 <h3 class="lista_nombre">{{nombre}}</h3>
                 <p class="lista_precio">{{precio}}</p>
                 <p class="lista_categoria">{{categoria}}</p>
-                <button class="lista_boton light">Adoptar</button>
+                <button id="{{nombre}}" class="lista_boton light">Adoptar</button>
             </li>
             {{/each}}
         </ul>
