--- a/public/styles/tienda.scss
+++ b/public/styles/tienda.scss
@@ -323,6 +323,95 @@ body {
     }
   }
 
+  .switchAdulto{
+    background-color: $switchbg;
+    width: 200px;
+    display: inline-block;
+    border-radius: 10px;
+    height: 40px;
+    padding: 2px;
+    position: relative;
+    @include clearfix;
+    label {
+      float: left;
+      width: 50%;
+      position: relative;
+      z-index: 2;
+      line-height: 40px;
+      cursor: pointer;
+      color: lighten($switchbg, 30%);
+      border-radius: 10px;
+    }
+    input[type="radio"]{
+      display: none;
+      &:checked + label {
+        color: $background;
+        font-weight: bold;
+      }
+    }
+    span {
+      position: relative;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      display: block;
+      border-radius: 10px;
+      background-color: #FFF;
+      transition: all 200ms ease;
+      &.right {
+        left: 50%;
+        border-radius: 10px;
+        transition: all 200ms ease;
+      }
+    }
+  }
+
+  .switchCachorro {
+    background-color: $switchbg;
+    width: 200px;
+    display: inline-block;
+    border-radius: 10px;
+    height: 40px;
+    padding: 2px;
+    position: relative;
+    @include clearfix;
+    label {
+      float: left;
+      width: 50%;
+      position: relative;
+      z-index: 2;
+      line-height: 40px;
+      cursor: pointer;
+      color: lighten($switchbg, 30%);
+      border-radius: 10px;
+    }
+    input[type="radio"]{
+      display: none;
+      &:checked + label {
+        color: $background;
+        font-weight: bold;
+      }
+    }
+    span {
+      position: relative;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      display: block;
+      border-radius: 10px;
+      background-color: #FFF;
+      transition: all 200ms ease;
+      &.right {
+        left: 50%;
+        border-radius: 10px;
+        transition: all 200ms ease;
+      }
+    }
+  }
   .linea{
     border: 1px solid $naranja;
   }
