--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,31 +8,40 @@
     <link rel="stylesheet" href="/styles/slides.css">
 
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 </head>
 
 <body>
     <div class="app">
         <header class="app__header">
-            <nav class="nav">
-                <img src="/fotos/logo.png" alt="" class="logo">
-                <a href="" class="nav__item">Inicio</a>
+
+            <nav class="nav" id="myTopnav">
+                <a href="/"><img src="../fotos/logo.png" alt="" class="logo"></a>
                 <a href="" class="nav__item">Sobre nosotros</a>
                 <a href="" class="nav__item">Sedes</a>
-                <a href="" class="nav__item">Peluditos</a>
-                <button class="nav__boton">Adopta</button>
+                <a href="" class="nav__item">Amigos</a>
+                <img src="../fotos/lupa.png" alt="" class="nav__lupa">
+                <img src="../fotos/pata.png" alt="" class="nav__pata">
+                <button onClick="location.href='/tienda'" class="nav__boton">Adopta</button>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
             </nav>
 
+
+
             <div class="dropdown">
-                    <span>Mouse over me</span>
-                    <div class="dropdown-content">
-                      <p>Hello World!</p>
-                    </div>
-                  </div>
+                <span>Mouse over me</span>
+                <div class="dropdown-content">
+                    <p>Hello World!</p>
+                </div>
+            </div>
         </header>
         <div class="body">
             <section class="body__top">
