--- a/views/tienda.handlebars
+++ b/views/tienda.handlebars
@@ -6,18 +6,19 @@
     <title>Tienda Peluditos</title>
     <link rel="stylesheet" href="/styles/tienda.css">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    
-  
+
+
 </head>
 
 <body>
 
     <nav class="nav">
-        <img src="./imag/logo.png" alt="" class="logo">
-        <a href="" class="nav__item">Inicio</a>
+        <a href="/"><img src="../fotos/logo.png" alt="" class="logo"></a>
         <a href="" class="nav__item">Sobre nosotros</a>
         <a href="" class="nav__item">Sedes</a>
         <a href="" class="nav__item">Amigos</a>
+        <img src="../fotos/lupa.png" alt="" class="nav__lupa">
+        <img src="../fotos/pata.png" alt="" class="nav__pata">
     </nav>
 
 
@@ -50,16 +51,16 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if macho}}
-                <script>
-                    var indicator = $(selector1).parent('.switchMacho').find('span');
-                    $(indicator).addClass('right');
+            {{#if macho}}
+            <script>
+                var indicator = $(selector1).parent('.switchMacho').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
 
-         <div class="switchHembra">
+        <div class="switchHembra">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
             <label for="optionone">OFF</label>
 
@@ -68,12 +69,12 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if hembra}}
-                <script>
-                    var indicator = $(selector1).parent('.switchHembra').find('span');
-                    $(indicator).addClass('right');
+            {{#if hembra}}
+            <script>
+                var indicator = $(selector1).parent('.switchHembra').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
 
@@ -88,16 +89,16 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if gato}}
-                <script>
-                    var indicator = $(selector1).parent('.switchGato').find('span');
-                    $(indicator).addClass('right');
+            {{#if gato}}
+            <script>
+                var indicator = $(selector1).parent('.switchGato').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
 
-         <div class="switchPerro">
+        <div class="switchPerro">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
             <label for="optionone">OFF</label>
 
@@ -106,16 +107,16 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if perro}}
-                <script>
-                    var indicator = $(selector1).parent('.switchPerro').find('span');
-                    $(indicator).addClass('right');
+            {{#if perro}}
+            <script>
+                var indicator = $(selector1).parent('.switchPerro').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
 
- <div class="switchAdulto">
+        <div class="switchAdulto">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
             <label for="optionone">OFF</label>
 
@@ -124,16 +125,16 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if adulto}}
-                <script>
-                    var indicator = $(selector1).parent('.switchAdulto').find('span');
-                    $(indicator).addClass('right');
+            {{#if adulto}}
+            <script>
+                var indicator = $(selector1).parent('.switchAdulto').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
 
-         <div class="switchCachorro">
+        <div class="switchCachorro">
             <input name="radio" type="radio" value="optionone" id="optionone" checked>
             <label for="optionone">OFF</label>
 
@@ -142,20 +143,16 @@
 
             <span aria-hidden="true"></span>
 
-           {{#if perro}}
-                <script>
-                    var indicator = $(selector1).parent('.switchCachorro').find('span');
-                    $(indicator).addClass('right');
+            {{#if cachorro}}
+            <script>
+                var indicator = $(selector1).parent('.switchCachorro').find('span');
+                $(indicator).addClass('right');
 
-                </script>
+            </script>
             {{/if}}
         </div>
-
-        
-
-        
-
     </div>
+    <!--Fin de filtros-->
 
     <div>
         <hr class="linea">
@@ -175,9 +172,11 @@
         </ul>
     </div>
 
-
-     <script src="/scripts/tienda.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
+    <div>
+        <hr class="linea">
+    </div>
+    <script src="/scripts/tienda.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.29/skrollr.min.js"></script>
 </body>
 
 </html>
