--- a/public/styles/producto.scss
+++ b/public/styles/producto.scss
@@ -77,6 +77,26 @@ body {
 
 ////// fin de nav 
 
+.carro--flotante{
+  display: flex;
+  flex-direction: row;
+background-color: $crema;
+  position: fixed;
+  right: 0px;
+  top: 300px;
+  z-index: 100;
+
+}
+.carro__imagen{
+  width: 100px;
+}
+.carro__num{
+  font-size: 30px;
+}
+
+////// fin de carro
+
+
 .producto{
 margin-top: 1%;
 padding: 0.5%;
@@ -90,11 +110,20 @@ border:3px solid $azul;
 display: flex;
 flex-direction: column;
 justify-content: center;
-flex-basis: 60%;
+flex-basis: 30%;
+align-items: center;
 }
 
-&__nombre{
-    color: $azul;
+&__texto{
+  margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 30%;
+
+  &__img{
+    height: 100px;
+    width: 100px;
+  }
 }
 
 &__foto{
@@ -104,18 +133,28 @@ flex-basis: 60%;
 
 }
 
+
+.purchase{
+  //background-color: #496eb5;
+  margin: 5px;
+  display: flex;
+  flex-basis: 30%;
+  align-items: flex-start;
+
+}
 .purchase-description{
   text-decoration: none !important;
 }
 .purchase ul {
   display:table;
-
+  justify-content: center;
 
 }
 .purchase li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: center;
   flex-basis: 40%;
   display:table-cell;
   width: 400px;
@@ -163,9 +202,9 @@ flex-basis: 60%;
 
 
 .purchase li strong {
-  font-size:19px;
+  font-size:30px;
   text-transform:uppercase;
-  color:#2F3740;
+  color: $azul;
   letter-spacing:2.4px;
   line-height:45px;
   font-weight:400;
@@ -175,22 +214,22 @@ flex-basis: 60%;
 
 .purchase__item{
   text-decoration: none;
-  justify-content: center ;
-  justify-items: center;
+  align-content: center;
+  align-items: center;
 
 }
 .purchase ul .purchase-description {
   justify-content: center;
   justify-items: center;
   display:block;
-  font-size:19px;
-  line-height:30px;
+  font-size:25px;
+  line-height:40px;
   text-transform: capitalize;
   text-decoration: none;
 }
 
 .purchase .purchase-price {
-  font-size:84px;
+  font-size:50px;
   letter-spacing:2px;
   padding-top:20px;
   display:block;
@@ -227,10 +266,55 @@ flex-basis: 60%;
   color:#6C6C6C;
 }
 
-.mapa{
-  height: 300px;
-} 
+.lista_boton{
+  padding: 0.8em 0em;
+  width:200px;
+  background: #ff6e00;
+  border-radius:15px;
+  border:0;
+  color:#fff;
+  font-size:16px;
+  font-family: Arial,Helvetica,sans-serif;
+  font-weight:bold;
+  cursor:pointer;
+  margin:1em 2em;
+  text-transform:uppercase;
+}
+.light{
+background: -moz-linear-gradient(-45deg,  #ff6e00 0%, #ff6e00 40%, #ffffff 50%, #ff6e00 60%, #ff6e00 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#ff6e00), color-stop(40%,#ff6e00), color-stop(50%,#ffffff), color-stop(60%,#ff6e00), color-stop(100%,#ff6e00));
+background: -webkit-linear-gradient(-45deg,  #ff6e00 0%,#ff6e00 40%,#ffffff 50%,#ff6e00 60%,#ff6e00 100%);
+background: -o-linear-gradient(-45deg,  #ff6e00 0%,#ff6e00 40%,#ffffff 50%,#ff6e00 60%,#ff6e00 100%);
+background: -ms-linear-gradient(-45deg,  #ff6e00 0%,#ff6e00 40%,#ffffff 50%,#ff6e00 60%,#ff6e00 100%);
+background: linear-gradient(135deg,  #ff6e00 0%,#ff6e00 40%,#ffffff 50%,#ff6e00 60%,#ff6e00 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6e00', endColorstr='#ff6e00',GradientType=1 );
+background-repeat: no-repeat;  
+background-position:0px;
+background-size:300%;  
+}
 
+.light:hover{
+animation:light 1s;
+-webkit-animation:light 1s;
+
+}
+@keyframes light {
+0% {
+    background-position:-600px; 
+}
+100% { 
+    background-position:0px; 
+}
+}
+    
+@-webkit-keyframes light {
+0% {
+    background-position:-600px; 
+}
+100% { 
+    background-position:0px; 
+}
+}
 
 
 
