--- a/views/forma.handlebars
+++ b/views/forma.handlebars
@@ -14,43 +14,52 @@
     <div class="titulo">
         <p class="titulo__texto">Revision de datos</p>
     </div>
-    <!-- multistep form -->
-    <form id="msform">
-        <!-- fieldsets -->
-        <fieldset>
-            <h2 class="fs-title"></h2>
-            <p>Nombre</p>
-            <input type="text" name="email" placeholder="Email" />
-            <input type="password" name="pass" placeholder="Password" />
-            <input type="password" name="cpass" placeholder="Confirm Password" />
-            <input type="button" name="next" class="next action-button" value="Next" />
-        </fieldset>
-        <fieldset>
-            <h2 class="fs-title">Social Profiles</h2>
-            <h3 class="fs-subtitle">Your presence on the social network</h3>
-            <input type="text" name="twitter" placeholder="Twitter" />
-            <input type="text" name="facebook" placeholder="Facebook" />
-            <input type="text" name="gplus" placeholder="Google Plus" />
-            <input type="button" name="previous" class="previous action-button" value="Previous" />
-            <input type="button" name="next" class="next action-button" value="Next" />
-        </fieldset>
-        <fieldset>
-            <h2 class="fs-title">Personal Details</h2>
-            <input type="text" name="fname" placeholder="Nombre" />
-            <input type="text" name="lname" placeholder="Apellido" />
-            <input type="text" name="phone" placeholder="Numero telefonico" />
-            <textarea name="address" placeholder="Direccion"></textarea>
-            <input type="button" name="previous" class="previous action-button" value="Previous" />
-            <input type="submit" name="submit" class="submit action-button" value="Submit" />
-        </fieldset>
+    <article class="contenido">
+        <div class="contenido--carrito">
+            <h3>Carrito</h3>
+            <ul class="carrito-desplegado__lista"></ul>
+        </div>
+        <div class="contenido--forma">
+            <form id="msform" action="/adopciomexitosa" method="POST">
+                <!-- progressbar -->
+                <ul id="progressbar">
+                    <li class="active">Datos Personales></li>
+                    <li>Social Profiles</li>
+                    <li>Personal Details</li>
+                </ul>
+                <!-- fieldsets -->
+                <fieldset>
+                    <h2 class="fs-title">Datos Personales></h2>
+                    <input type="text" name="email" placeholder="Email" />
+                    <input type="text" name="tarjeta" placeholder="Tarjeta" />
+                    <input type="text" name="cvv" placeholder="cvv" />
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Social Profiles</h2>
+                    <h3 class="fs-subtitle">Your presence on the social network</h3>
+                    <input type="text" name="ciudad" placeholder="Ciudad" />
+                    <input type="text" name="estado" placeholder="Estado" />
+                    <input type="text" name="pais" placeholder="Pais" />
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="button" name="next" class="next action-button" value="Next" />
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Personal Details</h2>
+                    <input type="text" name="fname" placeholder="Nombre" />
+                    <input type="text" name="lname" placeholder="Apellido" />
+                    <input type="text" name="phone" placeholder="Numero telefonico" />
+                    <textarea name="address" placeholder="Direccion"></textarea>
+                    <input type="button" name="previous" class="previous action-button" value="Previous" />
+                    <input type="submit" name="submit" class="submit action-button" value="Submit" />
+                    <input class="input-productos" type="hidden" name="productos" value="">
+                </fieldset>
 
-        <!-- progressbar -->
-        <ul id="progressbar">
-            <li class="active">Account Setup</li>
-            <li>Social Profiles</li>
-            <li>Personal Details</li>
-        </ul>
-    </form>
+
+            </form>
+        </div>
+    </article>
+    <!-- multistep form -->
 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
